--- a/Navbar/navbar.css
+++ b/Navbar/navbar.css
@@ -11,12 +11,15 @@ body {
   max-width: 1920px;
   width: 100%;
   height: 124px;
-  border: 1px solid #9A9A9A;
   padding: 16px 8px;
   box-sizing: border-box;
-  margin: 16px auto;
+  margin: 0 auto; /* removes top margin */
   background: white;
+  border: none; /* removes border */
+  position: relative;
+  top: 0;
 }
+
 
 .navbar {
   display: flex;
